Add cluster-verify probes, guided preflight, external cross-check, terminal-first UX
- clusterprobes.py: per-finding kubectl/helm commands for the cluster facts static
  analysis can't see (metrics pipeline, LimitRange defaulting, deprecated-API vs
  server version, pod-level QoS, ResourceQuota, JVM-sees-cgroup-limit). Report
  section "Verify on your cluster" + JSON cluster_probes; relevance-gated, names
  and selectors filled from the chart.
- preflight.py: guided input check (--check, exits) + always-on discovery banner
  that flags misplaced/missing files with a one-line fix each.
- external.py: --cross-check runs helm lint / kubeconform / kube-score / polaris
  (whichever are on PATH), folding their verbatim, attributed output into the
  report; absent tools show install hints; render-needing tools skipped with a
  reason when helm is unavailable.
- UX: terminal-first stdout summary (grade + fix-first list); --summary/--full
  and --all/--teach verbosity tiers; LOW/INFO collapsed by default; self-contained
  --html report (filter, collapsible cards, TOC, dark mode); grouped --help.
- Deterministic multi-chart selection (lexicographic tie-break, OS-independent).
- README: getting-started, project layout, cluster-context boundary, UX docs.
- Tests 102 -> 140.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GFL1Sr4aTgqosnYcFPwHWC