@@ -28,6 +28,100 @@ tool's own guesses can never sink your grade or read like measurements.
   deploy would. Without helm the tool falls back to static template
   scrubbing and says so, loudly, in the report's coverage section.
 
+## Getting started
+
+1. From the project directory (the folder containing `hpa-analyzer.py`),
+   install the one dependency:
+
+   ```bash
+   pip install -r requirements.txt   # PyYAML
+   #   on Debian/Ubuntu, if pip refuses: add --break-system-packages
+   ```
+
+   Optional but recommended: install `helm` and put it on your `PATH` for
+   rendered-truth analysis.
+
+2. Run it against the directory that holds your chart (and, ideally, the
+   service Dockerfile):
+
+   ```bash
+   python3 hpa-analyzer.py /path/to/your/service
+   ```
+
+   You do **not** place files anywhere special. You pass **one directory**
+   and the tool walks it to find the chart, values, templates and Dockerfile
+   itself.
+
+3. **Read the answer in your terminal.** By default the run prints the grade,
+   the finding counts, and the ranked *fix-first* list right to stdout — you
+   don't have to open a file to know what to do. The full report is written to
+   `hpa_analysis_report.txt` (or the `-o` path) for the deep dive; add
+   `--html` for a browsable version.
+
+```text
+$ python3 hpa-analyzer.py ./my-service
+  GRADE F  (45.5/100)   11 critical, 11 high, 14 medium, 16 low
+  Fix first:
+    1. [HP004] HPA minReplicas > maxReplicas (invalid)  (templates/hpa.yaml)
+    2. [HP050] Deployment sets spec.replicas while an HPA manages it
+    3. [RS002] Memory quantity uses 'm' (MILLI-bytes)  (values.yaml)
+    ... +17 more critical/high (see report)
+  Full report: hpa_analysis_report.txt
+```
+
+### How much detail? (verbosity)
+
+| Mode | Command | Contains |
+|---|---|---|
+| Terminal | *(always)* | grade + counts + top fixes on stdout (`--quiet` → one line) |
+| Summary | `--summary` | score, scorecard, CRITICAL/HIGH only (~150 lines) |
+| Default | *(none)* | findings + proofs + cluster-verify; LOW/INFO collapsed; **no** education |
+| Expanded | `--all` | as default, LOW/INFO expanded to full detail |
+| Teach | `--teach` | default **plus** the education appendix |
+| Full | `--full` | everything (implies `--all --teach`) |
+| Browsable | `--html [PATH]` | self-contained HTML: filter box, collapsible cards, TOC, dark-mode |
+
+## What it looks for (project layout)
+
+Point the tool at any directory that contains a Helm chart and, ideally, the
+service Dockerfile. A typical service repo looks like this — **point the
+tool at `my-service/`**:
+
+```
+my-service/                <-- pass THIS directory
+├── Chart.yaml             required: identifies the chart
+├── values.yaml            base configuration
+├── values-prod.yaml       optional overlay(s) — analyzed as variants
+├── values.schema.json     optional
+├── templates/
+│   ├── deployment.yaml
+│   ├── hpa.yaml
+│   ├── service.yaml
+│   └── _helpers.tpl
+└── Dockerfile             the JVM image (may live anywhere under the dir)
+```
+
+Files are discovered by name (case-insensitive) anywhere under the directory
+you pass:
+
+| Piece | Matched names |
+|---|---|
+| Chart | `Chart.yaml` / `Chart.yml` (outermost wins; other charts are recorded, never merged) |
+| Values | `values.yaml`, `values-prod.yaml`, `values_staging.yml`, … (`values*.ya?ml`) |
+| Templates | every `*.yaml` / `*.yml` / `*.tpl` / `NOTES.txt` under a `templates/` dir |
+| Dockerfile | `Dockerfile`, `Dockerfile.jre`, `service.dockerfile`, … |
+| Schema / ignore | `values.schema.json`, `.helmignore` |
+
+* The **Dockerfile does not have to be inside the chart** — anywhere under
+  the directory you pass is fine; it is matched by filename.
+* `charts/` (vendored subcharts), `.git`, `node_modules`, `.idea`,
+  `__pycache__` and `.helm` are skipped.
+* Point at the **chart root**, not a parent holding many charts: given
+  several `Chart.yaml`s the tool analyzes the outermost one and lists the
+  rest as separate (it never blends them).
+* **No Dockerfile?** The chart is still analyzed; the Java/JVM and cross-file
+  categories are marked `N/A` in the scorecard rather than guessed.
+
 ## Usage
 
 ```bash
@@ -43,7 +137,31 @@ python3 hpa-analyzer.py ./svc --fail-on high --min-score 70 --json findings.json
 # force or forbid helm rendering
 python3 hpa-analyzer.py ./svc --helm on
 python3 hpa-analyzer.py ./svc --helm off
+
+# guided input check: what did it find, what looks misplaced? (no analysis)
+python3 hpa-analyzer.py ./svc --check
+
+# also run the standard stack (helm lint / kubeconform / kube-score / polaris)
+python3 hpa-analyzer.py ./svc --cross-check
 ```
+
+**Guided input check (`--check`).** Before analyzing anything, prints what it
+discovered (chart, values, templates, workloads, Dockerfile + Java version)
+and flags what looks off — no Dockerfile, undeterminable Java (suggests
+`--assume-java`), several charts in one directory, parse failures — with a
+one-line fix for each. Exits `0` if it is a usable chart directory, `2` if
+it is not. Every normal run also prints this discovery banner first, so you
+always see what the tool saw; `--quiet` collapses the whole terminal output
+(banner + fix-first summary) to a single machine-readable line.
+
+**Cross-check against the standard stack (`--cross-check`).** Detects and
+runs whichever of `helm lint`, `kubeconform`, `kube-score` and `polaris` are
+on your `PATH`, and folds their **verbatim** output into the report (section
+"External validators"). hpa-analyzer did not write these tools and does not
+vouch for them — it reports their exit status and output as-is, clearly
+attributed. Absent tools are listed with an install command; tools that need
+rendered manifests are skipped with a reason when `helm` isn't available to
+render. Results also appear in `--json` under `cross_check`.
 
 Exit codes: `0` ok · `1` a gate failed (`--fail-on` / `--min-score`) ·
 `2` usage/IO error.
@@ -119,12 +237,18 @@ are reported and labeled with the overlay file.
    demand metrics (RPS / queue depth / p99, KEDA), predictive scaling and the
    scaling-invariant aggregate, the workload→scaler decision framework, how to
    read the `basis` line, and golden rules
-7. Methodology & limitations
+7. **Verify on your cluster** — for each cluster fact static analysis can't
+   see (metrics pipeline, LimitRange defaulting, deprecated-API vs server
+   version, pod-level QoS / native-sidecar footprint, ResourceQuota, whether
+   the JVM sees its cgroup limit), the exact `kubectl`/`helm` command to run
+   and how to read it. Only the checks relevant to your chart appear; also in
+   `--json` as `cluster_probes`.
+8. Methodology & limitations
 
 ## Development
 
 ```bash
-python3 -m unittest discover -s tests -t .     # 102 tests
+python3 -m unittest discover -s tests -t .     # 140 tests
 ```
 
 Each rule lives in one of the `hpaanalyzer/checks_*.py` modules and emits a
@@ -132,12 +256,71 @@ Each rule lives in one of the `hpaanalyzer/checks_*.py` modules and emits a
 automatically. Proof tables live in `proofs.py`. `tests/test_regressions.py`
 pins every bug found in adversarial review.
 
-## Known limitations (deliberate)
+## Where this fits (and where it does not)
+
+This is **one advisory stage**, not an admission/policy gate and not a
+standalone "is this prod-ready?" oracle. An `A+` means the chart is
+internally consistent and JVM-container-fit *by static analysis of the
+files you gave it* — it is **not** a promise the workload will schedule,
+scale, or even admit on your specific cluster. Pair it with:
+
+* `kubeconform` / `kubeval` for API-schema validation,
+* a policy engine (Kyverno / OPA-Gatekeeper / ValidatingAdmissionPolicy)
+  for your org's admission rules,
+* a real load test with GC logs (`-Xlog:gc*`) and `kubectl top` / VPA
+  recommendations for how the HPA and heap *actually* behave.
+
+Run it as a warning gate (`--fail-on high`), not the sole merge blocker.
+
+## Known limitations
+
+### Deliberate scope
 
 * Subcharts (`charts/`) are out of scope — run the analyzer against the
   subchart directly. The coverage section notes when they exist.
+* One chart per run: pointed at a directory with several charts, it analyzes
+  the outermost and records the rest as separate (never merged).
 * In static mode (no helm), complex template expressions (`tpl`, `printf`,
-  `required`) cannot be resolved; conditionals are analyzed as taken. The
-  report labels the mode and its consequences.
-* JVM memory components (metaspace, threads, direct buffers) are estimates
-  with stated values — replace with measured numbers for final sizing.
+  `required`) cannot be resolved and conditionals are analyzed as taken. The
+  report labels the mode and its consequences. Install `helm` for
+  rendered-truth analysis.
+* JVM memory components (metaspace, threads, direct buffers) are `DERIVED`
+  estimates with stated values — replace with measured numbers for final
+  sizing.
+
+### Cluster context it cannot see (the static-analysis boundary)
+
+The tool reads files, not a cluster. The following are real Kubernetes
+behaviours it does **not** model. It does not stay silent about them: the
+report's **"Verify on your cluster"** section (and the `cluster_probes`
+array in `--json`) prints the exact `kubectl`/`helm` command to close each
+gap that is relevant to your chart — pre-filled with the object names and
+label selectors it parsed — plus how to read the result. Where they apply,
+run the command and weigh the finding accordingly:
+
+* **LimitRange defaulting.** A container with no `requests`/`limits` may be
+  defaulted at admission by a namespace `LimitRange` — so it is not
+  necessarily `BestEffort`/unbounded. The tool flags the missing values
+  regardless; if your chart or namespace ships a `LimitRange`, read
+  `RS001`/QoS findings in that light.
+* **Deprecated-API severity vs `kubeVersion`.** A removed-API finding
+  (`TP010`) assumes a cluster at or past the removal version. It does **not**
+  down-rank based on a chart's declared `kubeVersion` window, so a chart
+  pinned below the removal version still gets the finding at full severity.
+* **Native sidecars** (`restartPolicy: Always` init containers, GA in 1.33).
+  Only `spec.containers` are analyzed; a restartable init container's
+  requests count toward real pod QoS and scheduling footprint but are not
+  yet included in the budget math.
+* **Metrics pipeline.** A correct CPU HPA still does nothing without
+  metrics-server; custom/external metrics need the Prometheus Adapter or
+  KEDA. The tool cannot verify any of it is installed.
+* **ResourceQuota.** A namespace quota can reject an otherwise-valid pod;
+  that is invisible to file-level analysis.
+
+### Correctness scoping
+
+* **QoS is shown per container.** Kubernetes QoS is a *pod-level* property
+  (a pod is `Guaranteed` only if **every** container has `requests==limits`
+  for both resources). For single-container workloads — the common JVM
+  service — the per-container view is exact; for multi-container pods, read
+  the per-container rows as inputs, not as the pod's class.
